# Fractals

./: CMakeLists.txt  README.md
assets/shaders/: color.fshader  transform.vshader
assets/shaders/flat/: fractals.frag  fractals.geom  fractals.vert
assets/shaders/simple/: fractals.frag  fractals.vert
src/: .infinicube.cpp.swp  .shape.cpp.swp  camera.cpp  camera.hpp  cube.cpp  cube.hpp  fractal.cpp  fractal.hpp  fractals.cpp  infinicube.cpp  infinicube.hpp  petal.cpp  petal.hpp  render.cpp  shader.cpp  shader.hpp  shape.cpp  shape.hpp  tree.cpp  tree.hpp
src/fractals/: .infinicube.cpp.swp  fractal.cpp  fractal.hpp  infinicube.cpp  infinicube.hpp  petal.cpp  petal.hpp  sierpinski.cpp  sierpinski.hpp  tree.cpp  tree.hpp
src/shapes/: cube.cpp  cube.hpp  pyramid.cpp  pyramid.hpp  shape.cpp  shape.hpp
